--- a/javascript/Vezba/javascript-amazon-project-main/styles/pages/checkout/checkout.css
+++ b/javascript/Vezba/javascript-amazon-project-main/styles/pages/checkout/checkout.css
@@ -209,3 +209,16 @@
   margin-top: 11px;
   margin-bottom: 15px;
 }
+
+.quantity-input {
+  width: 30px;
+  display: none;
+}
+
+.save-quantity {
+  display: none;
+}
+
+.is-editing .quantity-input {
+  display: initial;
+}
