save to update to save

--- a/javascript/Vezba/javascript-amazon-project-main/styles/pages/checkout/checkout.css
+++ b/javascript/Vezba/javascript-amazon-project-main/styles/pages/checkout/checkout.css
@@ -222,3 +222,15 @@
 .is-editing .quantity-input {
   display: initial;
 }
+
+.is-editing .save-quantity {
+  display: initial;
+}
+
+.is-editing .update-quantity {
+  display: none;
+}
+
+.is-editing .quantity-label {
+  display: none;
+}
